<resources>
    <string name="app_name">Movie App</string>
    <string name="see_all">Show More</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="tv_shows">TV Shows</string>
    <string name="search_hint">Search for a movie, tv show, person…</string>
    <string name="movies_chip">Movies</string>
    <string name="tv_shows_chip">TV Shows</string>
    <string name="actors_label">Actors</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_back_to_cineverse">Welcome back to CineVerse!</string>
    <string name="enter_your_email_or_username">Enter your email or username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login">Login</string>
    <string name="you_re_almost_there">You\'re Almost There!</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="join_cineverse">Join CineVerse</string>
    <string name="sign_up_description">Let\'s get you set up! We\'ll take you to the website to create your account.</string>
    <string name="log_in_to_update_your_name_profile_picture_and_account_details">Log in to update your name, profile picture, and account details</string>
    <string name="you_ll_be_taken_to_the_website_to_update_your_name_username_or_profile_picture">You’ll be taken to the website to update your name, username, or profile picture.</string>
    <string name="go_to_website">Go to Website</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="forgot_password_description">We\'ll take you to the website so you can securely update your password.</string>
    <string name="place_of_birth">place of Birth</string>
    <string name="konwn_for">Known For</string>
    <string name="todo">TODO</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="actors">Actors</string>
    <string name="oops">Oops!</string>
    <string name="description">There is no internet connection\nPlease check it out</string>
    <string name="all_movies_of_actor">All Movies Of Actor</string>
    <string name="content_preferences">Content Preferences</string>
    <string name="choose_how_you_d_like_to_handle_sensitive_or_revealing_images_in_the_app">Choose how you’d like to handle sensitive or revealing images in the app.</string>
    <string name="show_all_content">Show All Content</string>
    <string name="strict_filtering">Strict Filtering</string>
    <string name="hide_explicit_content">Hide Explicit Content</string>
    <string name="hides_revealing_or_inappropriate_posters_e_g_nudity_strong_sexual_content">Hides revealing or inappropriate posters (e.g. nudity, strong sexual content).</string>
    <string name="hides_all_content_that_includes_immodest_clothing_or_behavior">Hides all content that includes immodest clothing or behavior</string>
    <string name="no_filtering_all_images_and_posters_will_be_displayed">No filtering. All images and posters will be displayed.</string>
    <string name="title_on_air">On The Air</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_mystery">Mystery</string>
    <string name="title_adventure">Adventure</string>
    <string name="title_trending">Trending</string>
    <string name="title_streaming">Recently Released</string>
    <string name="title_upcoming">Upcoming Movies</string>
    <string name="title_celebrity">Celebrities</string>
    <string name="title_airing_today">Airing today</string>
    <string name="title_top_rated_tv_show">Top Rated Tv Shows</string>
    <string name="text_movies">%s Movies</string>
    <string name="movies_label">Movies</string>
    <string name="tv_shows_label">TV Shows</string>
    <string name="history_label">History</string>
    <string name="explore_label">Explore</string>
    <string name="trending_today_label">Trending Today</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="match">Match</string>
    <string name="myList">My Lists</string>
    <string name="profile">Profile</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="duration">%1$d Minutes</string>
    <string name="reviews">(%1$s reviews)</string>
    <string name="overview">Overview</string>
    <string name="Storyline">Storyline</string>
    <string name="cast">Star Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="rate_the_movie">Rate The Movie</string>
    <string name="reviews_title">Reviews</string>
    <string name="review">Reviews</string>
    <string name="reviews_comment">Reviews</string>
    <string name="user_name">"@" %1$s</string>
    <string name="back_button">back button</string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="submit_toast">Submitted, Thank you for your feedback</string>
    <string name="total_episodes">%1$s Episodes</string>
    <string name="m">%1$s m</string>
    <string name="watch_history">History</string>
    <string name="rated_movies">My Ratings</string>
    <string name="my_collections">My Collections</string>
    <string name="sign_out">Sign Out</string>
    <string name="at">\@</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You’re about to sign out of your account.</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="you_can_always_sign_back_in_with_your_account">You can always sign back in with your account.</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="login_or_signup">Login or Sign Up</string>
    <string name="to_personalize_your_experience">to personalize your experience!</string>
    <string name="version">Version 1.0.1</string>
    <string name="this_list_has_no_movies">This list has no movies</string>
    <string name="zero">\.0</string>
    <string name="my_ratings">My Ratings</string>
    <string name="items">%1$s Items</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="list_name">e.g. My Watchlist</string>
    <string name="explore_some_movies_on_home_or_search_and_then_create_your_movie_list">Explore some movies on “Home” or “Search” and then create your movie list.</string>
    <string name="empty_overview_text">This season has no description.</string>
    <string name="one_season">%1$d Season</string>
    <string name="more_than_one_season">%1$d Seasons</string>
    <string name="internet_connection">There is no internet connection.</string>
    <string name="retry">Retry</string>
    <string name="you_must_be_logged_in_to_see_the_profile">You must be logged in to see the profile and use additional features.</string>
    <string name="new_list">New List</string>
    <string name="log_in">Log In</string>
    <string name="you_must_be_logged_in_to_use_list_features">You must be logged in to use lists feature.</string>
    <string name="empty">Empty</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="save_to">Save to…</string>
    <string name="hours_pattern">%1$s hours</string>
    <string name="minutes_pattern">%1$s minutes</string>
    <string name="hours_minutes_pattern">%1$s h %2$s m</string>
    <string name="you_must_be_logged_in_to_save_a_movie">You must be logged in to save a movie</string>
    <string name="this_list_has_no_lists">No lists found</string>
    <string name="episode_title">%1$d. %2$s</string>
    <string name="season_number">(%1$s Seasons)</string>
    <string name="add_button">add_button</string>
    <string name="app_logo">app_logo</string>
    <string name="add_rating">Add Rating</string>
    <string name="delete_icon">delete icon</string>
    <string name="icon">icon</string>
    <string name="try_again">Try Again</string>
    <string name="create_collection">Create Collection</string>
    <string name="third">Third</string>
    <string name="second">Second</string>
    <string name="first">First</string>
    <string name="placeholder">placeholder</string>
    <string name="behind_the_scenes_section_title">Behind the Scenes</string>
    <string name="behind_the_scenes_section_show_more">Show More</string>
    <string name="behind_the_scenes_section_characters">Characters</string>
    <string name="behind_the_scenes_section_director">Director, Screenplay, Story</string>
    <string name="behind_the_scenes_section_screenplay">Screenplay</string>
    <string name="behind_the_scenes_section_story">Story</string>
    <string name="you_rated_it">You rated it</string>
    <string name="tap_to_change_your_rating">Tap to change your rating</string>
    <string name="title">Title</string>
    <string name="caption">Caption</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="preferences">Preferences</string>
    <string name="you_recently_viewed">You Recently Viewed</string>
    <string name="welcome">Welcome</string>
    <string name="fao">FAO</string>
    <string name="oops_no_internet">Oops! No Internet</string>
    <string name="looks_like_you_re_offline_let_s_reconnect_so_you_don_t_miss_out">Looks like you\'re offline. Let\'s reconnect\n so you don\'t miss out!</string>
    <string name="latest_seasons">Latest Seasons</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="new_collection">New Collection</string>
    <string name="time">Time</string>
    <string name="no_collections_yet">No Collections Yet</string>
    <string name="start_building_your_personal_library_by_saving_movies_or_series_you_want_to_remember">Start building your personal library by\nsaving movies or series you want to\nremember.</string>
    <string name="start_collecting">Start Collecting</string>
    <string name="welcome_to_your_movie_universe">Welcome to your movie universe</string>
    <string name="discover_track_and_rate_your_favorite_movies_series">Discover, track, and rate your favorite\n movies &amp; series.</string>
    <string name="track_everything">Track everything</string>
    <string name="your_watchlist_your_ratings_all_in_one_place">Your Watchlist. Your Ratings. All in One\n Place.</string>
    <string name="not_sure_watch">Not sure what to watch?</string>
    <string name="answer_questions">Answer a few quick questions and we’ll\n match you with the perfect picks.</string>
    <string name="start_matching">Start Matching</string>
    <string name="series">Series</string>
    <string name="tip_swipe_left_to_remove_movies_from_your_collection">Tip: Swipe left to remove movies from your collection.</string>
    <string name="no_rating_title">No Ratings Yet</string>
    <string name="no_ratings_caption">Rate movies and series you’ve watched to track what you love, and what you don’t.</string>
    <string name="start_rating_button">Start Rating</string>
</resources>